# noise

./: CMakeLists.txt  README.md
3rd/HighFive/include/highfive/: H5Version.hpp
3rd/HighFive/share/HighFive/CMake/: HighFiveConfig.cmake  HighFiveConfigVersion.cmake  HighFiveTargets.cmake
3rd/broker/doc/: design.md
3rd/broker/src/: common_types.h  trading_records.cpp  trading_records.h
3rd/broker/tests/: trading_system_test.cpp
3rd/glob/inc/: glob.h
3rd/qline/main/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
3rd/qline/qplot/: CMakeLists.txt  qdef.h  qfigure.cpp  qfigure.h  qplotwindow.cpp  qplotwindow.h  qutil .cpp  qutil.h  qvolume.cpp  qvolume.h
3rd/qline/src/: CMakeLists.txt  autogrid.cpp  autogrid.h  datafile.cpp  datafile.h  linegrid.cpp  linegrid.h  showdetail.cpp  showdetail.h  volumegrid.cpp  volumegrid.h
3rd/spdlog/include/spdlog/: common.h
3rd/spdlog/lib/: spdlog.lib
3rd/spdlog/lib/cmake/spdlog/: spdlogConfig.cmake  spdlogConfigTargets-debug.cmake  spdlogConfigTargets-release.cmake  spdlogConfigTargets.cmake  spdlogConfigVersion.cmake
3rd/spdlog/lib/pkgconfig/: spdlog.pc
broker/: CMakeLists.txt
broker/src/: main.cpp  trading_system.cpp  trading_system.h  utils.cpp  utils.h
config/: chs.code.csv  chs0304.ini
data/: 300015.SZ.csv
doc/: design.md  todo.md
private/data/: pearson.000026.SZ.csv
private/py/: kalman.py
sample/: .gitignore  CMakeLists.txt
sample/cd/: CMakeLists.txt  cd.cpp  cd.h  main.cpp
sample/pack/: pack.cpp
sample/sel/: sel.cpp
sample/sel_positive/: sel_positive.cpp
sample/show/: show.cpp  show.h
sample/tests/: tests.cpp
src/: CMakeLists.txt  main.cpp
src/base/: backtest.cpp  broker.cpp  data.cpp  feed.cpp  log.cpp  mcache.cpp  noise.cpp  position.cpp  stat.cpp  strategy.cpp
src/base/feed/: feed.cpp  feed_csv.cpp  feed_memory.cpp
src/base/filesystem/: csv.cpp  fs.cpp  h5.cpp  hdf.cpp
src/base/indicator/: boll.cpp  indicator.cpp  isys.cpp  ma.cpp  stddev.cpp  ta.cpp
src/base/math/: histogram.cpp  position_tracker.cpp
src/base/util/: uargs.cpp  uarma.cpp  umath.cpp  uprint.cpp  uta.cpp  uta_slow.cpp  utalib.cpp  util.cpp  utime.cpp
src/extend/gnuplot/: gnuplot.cpp  gnuplot.h
src/extend/qplot/: qplot.cpp  qplot.h
src/gui/: qplot.cpp
src/gui/libqplot/: CMakeLists.txt  qfigure.cpp  qfigure.h  qplotchartwindow.cpp  qplotchartwindow.h  qplotchartwindow.ui  qplotwindow.cpp  qplotwindow.h  qutil .cpp  qutil.h  qvolume.cpp  qvolume.h
src/inc/3rd/: INIReader.h  args.hxx
src/inc/noise/: args.h  backtest.h  broker.h  data.h  def.h  feed.h  log.h  mcache.h  noise.h  plot.h  position.h  stat.h  strategy.h  util.h  util2.h
src/inc/noise/feed/: feed.h  feed_csv.h  feed_memory.h
src/inc/noise/filesystem/: fs.h  fs_private.h
src/inc/noise/indicator/: boll.h  indicator.h  isys.h  ma.h  stddev.h  ta.h
src/inc/noise/math/: histogram.h  position_tracker.h
src/tests/: tests.cpp
